--- a/traefik/traefikv3.3/.env
+++ b/traefik/traefikv3.3/.env
@@ -1,1 +1,13 @@
-
+TRAEFIK_LOG_LEVEL=INFO
+TRAEFIK_PROVIDERS_DOCKER=true
+TRAEFIK_API_DASHBOARD=true
+#
+TRAEFIK_DOMAIN=ict.DOMAIN.com
+TRAEFIK_EMAIL=email
+TRAEFIK_HTTP_PORT=80
+TRAEFIK_HTTPS_PORT=443
+TRAEFIK_DASHBOARD_CREDENTIALS=admin:$$2y$$05hashedpassword
+TRAEFIK_CERT_FILE=/certs/cert.crt
+TRAEFIK_KEY_FILE=/certs/cert.key
+# sudo apt install -y apache2-utils
+# echo $(htpasswd -nB admin) | sed -e s/\\$/\\$\\$/g
